--- a/src/components/catalog/catalog.module.css
+++ b/src/components/catalog/catalog.module.css
@@ -3,15 +3,20 @@
     text-align: center;
 }
 
+.title {
+    font-size: 2em;
+    font-weight: bold;
+}
+
 .itemsContainer {
     display: grid;
     max-width: 80em;
     margin: auto;
-    padding: 10px 0;
-    grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
-    grid-template-rows: repeat(auto-fit, 220px);
-    column-gap: 10px;
-    row-gap: 10px;
+    padding: 0.5em 0;
+    grid-template-columns: repeat(auto-fit, minmax(14em, 1fr));
+    grid-template-rows: repeat(auto-fit, 13.5em);
+    column-gap: 0.5em;
+    row-gap: 0.5em;
     justify-content: center;
     justify-items: center;
 }
