--- a/src/components/catalog/item/item.module.css
+++ b/src/components/catalog/item/item.module.css
@@ -1,9 +1,13 @@
 .item {
     display: flex;
     justify-content: center;
-    width: 220px;
-    height: 220px;
+    width: 13.5em;
+    height: 13.5em;
     border: 1px solid black;
-    border-radius: 5px;
-    padding: 10px;
+    border-radius: 0.3em;
+    padding: 0.5em;
+}
+
+.item svg {
+    max-height: 100%;
 }
