--- a/src/components/catalog/item/item.module.css
+++ b/src/components/catalog/item/item.module.css
@@ -8,6 +8,11 @@
     padding: 0.5em;
 }
 
-.item svg {
+.item div {
+    max-width: 100%;
     max-height: 100%;
+}
+
+.item svg {
+    height: 100%
 }
