--- a/src/components/catalog/item/item.module.css
+++ b/src/components/catalog/item/item.module.css
@@ -6,6 +6,13 @@
     border: 1px solid black;
     border-radius: 0.3em;
     padding: 0.5em;
+    margin: 0.5em;
+}
+
+@supports (display: grid) {
+    .item {
+        margin: 0;
+    }
 }
 
 .item div {
