--- a/src/components/catalog/item/item.module.css
+++ b/src/components/catalog/item/item.module.css
@@ -18,8 +18,11 @@
 .item div {
     max-width: 100%;
     max-height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .item svg {
-    height: 100%
+    width: 100%;
+    height: 100%;
 }
