--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,12 @@ html {
 }
 
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 600px) and (orientation: portrait) {
+  html {
+    --font-size: 10px;
+  }
+}
+@media only screen and (max-height: 600px) and (orientation: landscape){
   html {
     --font-size: 10px;
   }
